fix: media h2 text align

--- a/src/page/services/interior-design/ui/stages/style.module.scss
+++ b/src/page/services/interior-design/ui/stages/style.module.scss
@@ -27,6 +27,10 @@
   }
 
   @media (max-width: 1024px) {
+    h2 {
+      text-align: center;
+    }
+
     ol {
       display: block;
       border-top: none;
